--- a/js/.jshintrc
+++ b/js/.jshintrc
@@ -1,20 +1,50 @@
+/**
+ * All available rules
+ * http://www.jshint.com/docs/options/
+ */
+
 {
     "bitwise": true,
+    "camelcase": true,
     "curly": true,
     "eqeqeq": true,
-    "forin": true,
-    "freeze": true,
     "immed": true,
+    "indent": 4,
     "latedef": true,
     "newcap": true,
     "noarg": true,
     "noempty": true,
-    "nonbsp": true,
     "nonew": true,
     "plusplus": true,
+    "quotmark": "single",
     "undef": true,
-    "unused": "strict",
+    "unused": true,
+    "strict": true,
+    "trailing": true,
+
+    // Modify to suite your project based needs
+    "maxparams": 3,
+    "maxdepth": 3,
+    "maxstatements": 12,
+    "maxcomplexity": 6,
+    "maxlen": 120,
+
+    "eqnull": true,
+
+    // Modify to set for a given environment
     "browser": true,
+    "node": true,
     "devel": true,
-    "node": true
+    "jquery": true,
+
+    // Modify to add necessary globals
+    "globals": {
+        // Jasmine
+        "describe": true,
+        "expect": true,
+        "it": true,
+        "beforeEach": true,
+        "afterEach": true,
+        "spyOn": true
+    }
 }
