--- a/css/config.yml
+++ b/css/config.yml
@@ -55,7 +55,7 @@ linters:
 
   LeadingZero:
     enabled: true
-    style: exclude_zero
+    style: include_zero
 
   MergeableSelector:
     enabled: true
